fixed logo alignments and contact button link

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -30,6 +30,8 @@
 }
 
 .footer img {
-  height: 50px;
+  height: 55px;
   filter: brightness(200%) contrast(200%) grayscale(100%);
+  padding-left: 12%;
+  padding-right: 18%;
 }
